...
    }

    // MARK: - Display

    public var displayName: String {
        switch self {
        case .oldTimeRadio:       "All Shows"
        case .otrrDrama:          "Drama"
        case .otrrComedy:         "Comedy"
        case .otrrMystery:        "Mystery & Detective"
        case .otrrAdventure:      "Adventure"
        case .otrrWestern:        "Westerns"
        case .otrrScienceFiction: "Science Fiction"
        case .otrrHorror:         "Horror & Suspense"
        case .radioBooks:         "Radio Books"
...
